--- a/data/gnome-video-arcade.glade
+++ b/data/gnome-video-arcade.glade
@@ -110,6 +110,7 @@
                     <property name="events">GDK_POINTER_MOTION_MASK | GDK_POINTER_MOTION_HINT_MASK | GDK_BUTTON_PRESS_MASK | GDK_BUTTON_RELEASE_MASK</property>
                     <property name="headers_clickable">True</property>
                     <property name="rules_hint">True</property>
+                    <property name="show_expanders">False</property>
                     <signal name="popup_menu" handler="gva_tree_view_popup_menu_cb"/>
                     <signal name="button_press_event" handler="gva_tree_view_button_press_event_cb"/>
                     <signal name="row_activated" handler="gva_tree_view_row_activated_cb"/>
@@ -209,6 +210,7 @@
     <property name="default_height">250</property>
     <property name="destroy_with_parent">True</property>
     <property name="transient_for">main-window</property>
+    <signal name="hide" handler="gva_play_back_window_hide_cb"/>
     <signal name="delete_event" handler="gtk_widget_hide_on_delete"/>
     <child>
       <widget class="GtkVBox" id="play-back-vbox">
@@ -228,6 +230,7 @@
                 <property name="can_focus">True</property>
                 <property name="reorderable">True</property>
                 <property name="rules_hint">True</property>
+                <property name="show_expanders">False</property>
                 <signal name="row_activated" handler="gva_play_back_row_activated_cb"/>
               </widget>
             </child>
